# org

./: .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.devague/: current  current_plan
.devague/deliveries/: devague-page-the-challenge-leg.json  presentations-tab-and-neurosymbolic-robots.json  the-colleague-page.json
.devague/frames/: agentculture-org-agents-devague-is-live-a-presenta.json  agentculture-org-agents-lobes-is-live-a-presentati.json  agentculture-org-is-live-the-org-site-is-built-in.json  articles-symbolic-presentations.json  autonomy-stuck-vignette.json  cli-runtime-reframe.json  deck-six-slide-narrative.json  devague-page-six-leg-update.json  devague-page-the-challenge-leg.json  presentations-tab-and-neurosymbolic-robots.json  the-agents-lobes-page-on-agentculture-org-now-pres.json  the-colleague-page.json  the-reachy-mini-cli-page.json  whats-next-finale-slide.json
.devague/plans/: agentculture-org-agents-devague-is-live-a-presenta.json  agentculture-org-agents-lobes-is-live-a-presentati.json  agentculture-org-is-live-the-org-site-is-built-in.json  articles-symbolic-presentations.json  autonomy-stuck-vignette.json  cli-runtime-reframe.json  deck-six-slide-narrative.json  devague-page-six-leg-update.json  devague-page-the-challenge-leg.json  presentations-tab-and-neurosymbolic-robots.json  the-agents-lobes-page-on-agentculture-org-now-pres.json  the-colleague-page.json  the-reachy-mini-cli-page.json
.github/workflows/: deploy.yml  publish.yml  tests.yml
docs/: .markdownlint.yaml  deploy-runbook.md  presentation-photos.md  skill-sources.md
org/: __init__.py  __main__.py
org/cli/: __init__.py  _errors.py  (+1 more)
site-astro/: astro.config.mjs  package-lock.json  package.json
tests/: test_cli.py  test_cli_introspection.py  test_site_cmd.py
(+109 files in other folders)
